# todo

todo-app/: .env  Cargo.toml  Rocket.toml
todo-app/migrations/2021-12-27-210013_create_tasks/: down.sql  up.sql
todo-app/src/: cors.rs  main.rs  models.rs  routes.rs  schema.rs
todo-web/: package-lock.json  package.json
todo-web/public/: index.html
todo-web/src/: AddTodo.js  App.js  Settings.js  TodoItem.js  TodoList.js
